--- a/ndb-operator/values.yaml
+++ b/ndb-operator/values.yaml
@@ -1,12 +1,32 @@
-replicaCount: 2
+replicaCount: 1
+
+image:
+  repository: ghcr.io/nutanix-cloud-native/ndb-operator/controller
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "v0.0.2"
+
+imagePullSecrets: []
+nameOverride: ""
+fullnameOverride: ""
+
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: true
+  # Annotations to add to the service account
+  annotations: {}
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name: "ndb-operator-service-account"
 
 podAnnotations: 
   kubectl.kubernetes.io/default-container: manager
 
-imagePullSecrets: []
-name: ndb-operator
-nameOverride: ""
-fullnameOverride: ""
+podSecurityContext:
+  runAsNonRoot: true
+
+securityContext:
+  allowPrivilegeEscalation: false
 
 resources:
   kubeProxy:
@@ -24,13 +44,6 @@ resources:
       cpu: 10m
       memory: 64Mi
 
-
-image:
-  repository: ghcr.io/nutanix-cloud-native/ndb-operator/controller
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.0.2"
-    
 nodeSelector: {}
 
 tolerations: []
