--- a/ndb-operator/templates/rbac.authorization.k8s.io_v1_rolebinding_leader-election-rolebinding.yaml
+++ b/ndb-operator/templates/rbac.authorization.k8s.io_v1_rolebinding_leader-election-rolebinding.yaml
@@ -9,5 +9,5 @@ roleRef:
   name: {{ include "ndb-operator.fullname" . }}-leader-election-role
 subjects:
 - kind: ServiceAccount
-  name: {{ include "ndb-operator.fullname" . }}-controller-manager
+  name: {{ include "ndb-operator.serviceAccountName" . }}
   namespace: {{.Release.Namespace}}
