--- a/ndb-operator/templates/v1_serviceaccount_controller-manager.yaml
+++ b/ndb-operator/templates/v1_serviceaccount_controller-manager.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "ndb-operator.fullname" . }}-controller-manager
+  name: {{ include "ndb-operator.serviceAccountName" . }}
   namespace: {{.Release.Namespace}}
