--- a/ndb-operator/values.yaml
+++ b/ndb-operator/values.yaml
@@ -12,6 +12,7 @@ fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
+  #TODO: Discuss create, annotations
   create: true
   # Annotations to add to the service account
   annotations: {}
