--- a/ndb-operator/Chart.yaml
+++ b/ndb-operator/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.1
+version: 0.0.2
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -25,12 +25,9 @@ appVersion: "v0.0.2"
 
 annotations:
   artifacthub.io/changes: |
-    - kind: added
-      description: Helm Chart
-      links:
-        - name: GitHub 
-          url: https://github.com/nutanix-cloud-native/ndb-operator   
-  artifacthub.io/containsSecurityUpdates: "false"  
+    - kind: Updated
+      description: Kube Proxy
+  artifacthub.io/containsSecurityUpdates: "true"  
   artifacthub.io/crds: |
     - kind: Database
       version: v1alpha1
