--- a/ndb-operator/Chart.yaml
+++ b/ndb-operator/Chart.yaml
@@ -25,8 +25,8 @@ appVersion: "v0.0.2"
 
 annotations:
   artifacthub.io/changes: |
-    - kind: Updated
-      description: Kube Proxy
+    - kind: security
+      description: "Updated Kube Proxy version"
   artifacthub.io/containsSecurityUpdates: "true"  
   artifacthub.io/crds: |
     - kind: Database
